--- a/config/default/core.entity_form_display.node.email.default.yml
+++ b/config/default/core.entity_form_display.node.email.default.yml
@@ -7,22 +7,14 @@ dependencies:
     - field.field.node.email.field_preferred
     - field.field.node.email.field_tags
     - node.type.email
-  module:
-    - path
 id: node.email.default
 targetEntityType: node
 bundle: email
 mode: default
 content:
-  created:
-    type: datetime_timestamp
-    weight: 10
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_address:
     type: email_default
-    weight: 121
+    weight: 1
     region: content
     settings:
       placeholder: ''
@@ -30,64 +22,33 @@ content:
     third_party_settings: {  }
   field_preferred:
     type: boolean_checkbox
-    weight: 122
+    weight: 2
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_tags:
     type: entity_reference_autocomplete_tags
-    weight: 123
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
       placeholder: ''
-    third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    weight: 15
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    weight: 120
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    weight: 16
-    region: content
-    settings:
-      display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  uid:
-    type: entity_reference_autocomplete
-    weight: 5
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  created: true
+  path: true
+  promote: true
+  status: true
+  sticky: true
+  uid: true
