--- a/config/default/field.field.node.contact.field_department.yml
+++ b/config/default/field.field.node.contact.field_department.yml
@@ -1,26 +1,26 @@
-uuid: f8e64af4-972d-4811-a254-b24079cf0ebe
+uuid: 333c1363-1053-4e04-a4df-467e0d52e8f9
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_tags
-    - node.type.phone_number
-    - taxonomy.vocabulary.tags
-id: node.phone_number.field_tags
-field_name: field_tags
+    - field.storage.node.field_department
+    - node.type.contact
+    - taxonomy.vocabulary.ohano_department
+id: node.contact.field_department
+field_name: field_department
 entity_type: node
-bundle: phone_number
-label: Tags
+bundle: contact
+label: Department
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      tags: tags
+      ohano_department: ohano_department
     sort:
       field: name
       direction: asc
