--- a/config/default/field.field.node.contact.field_role.yml
+++ b/config/default/field.field.node.contact.field_role.yml
@@ -1,26 +1,26 @@
-uuid: ff12cb21-1b38-409b-b22b-899a520f50cc
+uuid: 9d279b03-88bb-41e5-8871-99626919a39d
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_tags
-    - node.type.email
-    - taxonomy.vocabulary.tags
-id: node.email.field_tags
-field_name: field_tags
+    - field.storage.node.field_role
+    - node.type.contact
+    - taxonomy.vocabulary.ohano_role
+id: node.contact.field_role
+field_name: field_role
 entity_type: node
-bundle: email
-label: Tags
+bundle: contact
+label: Role
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      tags: tags
+      ohano_role: ohano_role
     sort:
       field: name
       direction: asc
